--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "framer-motion": "^8.5.0",
+    "i18next": "^23.8.2",
     "next": "^13.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^14.0.1",
     "react-icons": "^4.10.1",
     "react-medium-image-zoom": "^5.1.8",
     "three": "^0.148.0"
