add gallery and zoom image but need to be fix on mobile

--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@chakra-ui/react": "^2.4.9",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@heroicons/react": "^2.1.1",
     "framer-motion": "^8.5.0",
     "i18next": "^23.8.2",
     "next": "^13.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-grid-gallery": "^1.0.1-alpha.0",
     "react-i18next": "^14.0.1",
     "react-icons": "^4.10.1",
     "react-medium-image-zoom": "^5.1.8",
