--- a/package.json
+++ b/package.json
@@ -22,15 +22,17 @@
     "next": "^13.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-grid-gallery": "^1.0.1-alpha.0",
     "react-i18next": "^14.0.1",
     "react-icons": "^4.10.1",
     "react-medium-image-zoom": "^5.1.8",
     "three": "^0.148.0"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.20",
     "eslint": "^8.32.0",
     "eslint-config-next": "^13.1.2",
-    "prettier": "^2.8.3"
+    "postcss": "^8.4.47",
+    "prettier": "^2.8.3",
+    "tailwindcss": "^3.4.14"
   }
 }
